--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -7,6 +7,7 @@
 	<base href="/">
 	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> 
 </head>
 <body>
 	<app-root>Loading...</app-root>
