--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -5,9 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>yourGYM</title>
 	<base href="/">
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald"> 
 </head>
 <body>
 	<app-root>Loading...</app-root>
