--- a/angular-src/src/index.html
+++ b/angular-src/src/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>yourGYM</title>
 	<base href="/">
-	<link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="icon" type="image/png" href="favicon.png">
 	<link rel="stylesheet" href="https://bootswatch.com/sandstone/bootstrap.min.css">
 </head>
 <body>
